Revise README for improved clarity and organization
Updated README.md to enhance formatting and structure, including feature highlights and installation instructions.